@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Mon Jun 05 15:30:36 CEST 2006
-build.number=52
+#Tue Jun 06 10:15:03 CEST 2006
+build.number=54
