@@ -55,7 +55,7 @@
 
 <h3>Development</h3>
 <ul>
-   <li><a target="_top" href="http://www.restlet.org/downloads/restlet-1.0b14.zip">Download</a> the <b>1.0 beta 14</b> release (<a target="_top" href="http://blog.noelios.com">announces</a>, <a target="_top" href="http://www.restlet.org/docs/changes">changes log</a>)</li>
+   <li><a target="_top" href="http://www.restlet.org/downloads/restlet-1.0b15.zip">Download</a> the <b>1.0 beta 15</b> release (<a target="_top" href="http://blog.noelios.com">announces</a>, <a target="_top" href="http://www.restlet.org/docs/changes">changes log</a>)</li>
    <li><a target="_top" href="http://www.restlet.org/discuss">Discuss</a> with users and developers</li>
    <li><a target="_top" href="http://restlet.tigris.org/servlets/ProjectIssues">Report issues</a> (defects, feature, enhancement requests)</li>
    <li><a target="_top" href="http://restlet.tigris.org">Development site</a> at Tigris.org</li>
@@ -80,7 +80,7 @@
 <br/>
 
 <small>
-   Last modified on 2006-06-02<br/>
+   Last modified on 2006-06-06<br/>
    Copyright &copy; 2005-2006 <a href="mailto:contact@noelios.com">J&eacute;r&ocirc;me Louvel</a>. Restlet is a registered trademark of <a target="_top" href="http://www.noelios.com">Noelios Consulting</a>.
 </small>
 
